# cc.demo1.commsdsl

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  readme.generated
.github/workflows/: actions_build.yml
cmake/: CC_Prefetch.cmake
dsl/: schema.xml
examples/: CMakeLists.txt
examples/client/: CMakeLists.txt  Client.cpp  Client.h  ProgramOptions.cpp  ProgramOptions.h  main.cpp
examples/common/include/common/: boost_wrap.h
examples/server/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.h  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
script/: full_debug_build.sh  prepare_externals.bat  prepare_externals.sh
src/emscripten/: README.md
src/protocol/: README.md
src/swig/: README.md
src/test/: README.md
src/tools/: README.md
swig_src/: CMakeLists.txt.append
